<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="2dp"
        android:text="@string/taskMinutes"
        android:textSize="20sp"
        android:layout_marginRight="2dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="7dp"
        android:text="@string/breakMinutes"
        android:textSize="20dp"
        android:layout_marginRight="7dp" />

    <Button
        android:id="@+id/set_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#e6e6e6"
        android:padding="10dp"
        android:radius="25dp"
        android:text="@string/setMinutes" />

    <SeekBar
        android:id="@+id/task_length_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="79dp"
        android:max="60"
        android:min="1"
        android:progressTint="@color/green"
        android:thumbTint="@color/darkGreen" />

    <TextView
        android:id="@+id/taskLength_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:text="TextView"
        android:textSize="18dp" />

    <SeekBar
        android:id="@+id/break_seek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:max="60"
        android:min="1"
        android:progressTint="@color/green"
        android:thumbTint="@color/darkGreen" />

    <TextView
        android:id="@+id/break_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginBottom="3dp"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:text="TextView"
        android:textSize="18dp" />
</RelativeLayout>